now fetchFoodList from db

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -61,6 +61,45 @@
     right: -8px;
 }
 
+.navbar .navbar-profile {
+    position: relative;
+    cursor: pointer;
+}
+
+.navbar .navbar-profile .nav-profile-dropdown {
+    position: absolute;
+    display: none;
+    right: 0;
+    z-index: 1;
+}
+
+.navbar .navbar-profile:hover .nav-profile-dropdown {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fff2ef;
+    padding: 12px 25px;
+    border-radius: 4px;
+    border: 1px solid tomato;
+    outline: 2px solid white;
+    list-style: none;
+}
+
+.navbar .nav-profile-dropdown li {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.navbar .nav-profile-dropdown li:hover {
+    color: tomato;
+}
+
+.navbar .nav-profile-dropdown img {
+    width: 20px;
+}
+
 @media (max-width:1050px) {
     .navbar .logo {
         width: 140px;
